k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dotnet-namespace
  labels:
    name: dotnet-namespace
    environment: production
